15170
```scala
Welcome to Scala version 2.8.0.r21298-b20100329141121 (Java HotSpot(TM) 64-Bit Server VM, Java 1.6.0_19).

scala> trait X[A <% B]
<console>:1: error: traits cannot have type parameters with context bounds `: ...'
       trait X[A <% B]
                      ^
```

I used a view bound, not a context bound, but the error message is about context bounds.

2.7 gave the right error:
```scala
Welcome to Scala version 2.7.7.final (Java HotSpot(TM) 64-Bit Server VM, Java 1.6.0_19).

scala> trait X[A <% B]
<console>:2: error: traits cannot have type parameters with <% bounds

^
```
